@@ -2,41 +2,76 @@ package com.optima.hrm_erp.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.jwt.*;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 
-import java.util.Arrays;
+import javax.crypto.spec.SecretKeySpec;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Configuration
+@EnableMethodSecurity
 public class SecurityConfig {
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
-                .cors(Customizer.withDefaults()) // Cho phép dùng cấu hình CORS
+    public SecurityFilterChain filterChain(HttpSecurity http,
+                                           @Value("${app.cors.allowed-origins}") String allowedOrigins,
+                                           JwtAuthenticationConverter jwtAuthConverter) throws Exception {
+        return http
                 .csrf(csrf -> csrf.disable())
+                .cors(cors -> cors.configurationSource(corsConfigurationSource(allowedOrigins)))
                 .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()   // Tạm thời cho phép tất cả request
-                );
-
-        return http.build();
+                        .requestMatchers("/public/**").permitAll()
+                        .anyRequest().authenticated()
+                )
+                .oauth2ResourceServer(oauth -> oauth.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthConverter)))
+                .build();
     }
 
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("http://localhost:5173")); // URL frontend
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowCredentials(true);
-
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
-
+    public CorsConfigurationSource corsConfigurationSource(String allowedOrigins) {
+        var conf = new CorsConfiguration();
+        conf.setAllowedOrigins(Arrays.asList(allowedOrigins.split(","))); // ví dụ: http://localhost:5173
+        conf.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
+        conf.setAllowedHeaders(List.of("Authorization","Content-Type"));
+        conf.setAllowCredentials(true); // nếu cần gửi cookie/session
+        var source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", conf);
         return source;
+    }
+
+    // Dùng cùng secret HS256 với Auth Service
+    @Bean
+    public JwtDecoder jwtDecoder(@Value("${security.jwt.secret}") String secret,
+                                 @Value("${security.jwt.issuer}") String issuer) {
+        var key = new SecretKeySpec(secret.getBytes(StandardCharsets.UTF_8), "HmacSHA256");
+        NimbusJwtDecoder decoder = NimbusJwtDecoder.withSecretKey(key).build();
+        decoder.setJwtValidator(JwtValidators.createDefaultWithIssuer(issuer));
+        return decoder;
+    }
+
+    // Map claim "roles" -> authorities
+    @Bean
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        var converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            String roles = jwt.getClaimAsString("roles");
+            if (roles == null || roles.isBlank()) return List.of();
+            return Arrays.stream(roles.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
+        });
+        return converter;
     }
 }
